@@ -2,7 +2,23 @@
 
 PATH="@X_PATH@:$PATH:/bin:/usr/bin"
 
-SESSREG=`which sessreg 2>/dev/null`
+gdmwhich () {
+  COMMAND="$1"
+  OUTPUT=
+  IFS=:
+  for dir in $PATH
+  do
+    if test -x "$dir/$COMMAND" ; then
+      if test "x$OUTPUT" = "x" ; then
+        OUTPUT="$dir/$COMMAND"
+      fi
+    fi
+  done
+  unset IFS
+  echo "$OUTPUT"
+}
+
+SESSREG=`gdmwhich sessreg`
 if [ "x$SESSREG" != "x" ] ; then
 	"$SESSREG" -d -w /var/log/wtmp -u /var/run/utmp -x "$X_SERVERS" -h "$REMOTE_HOST" -l "$DISPLAY" "$USER"
 fi
