@@ -51,7 +51,23 @@ gettextfunc () {
   fi
 }
 
-zenity=`which zenity 2>/dev/null`
+gdmwhich () {
+  COMMAND="$1"
+  OUTPUT=
+  IFS=:
+  for dir in $PATH
+  do
+    if test -x "$dir/$COMMAND" ; then
+      if test "x$OUTPUT" = "x" ; then
+        OUTPUT="$dir/$COMMAND"
+      fi
+    fi
+  done
+  unset IFS
+  echo "$OUTPUT"
+}
+
+zenity=`gdmwhich zenity`
 
 command="$1"
 
@@ -72,7 +88,7 @@ fi
 # works for ALL sessions (except ones named 'Failsafe')
 
 # clean up after xbanner
-freetemp=`which freetemp 2>/dev/null`
+freetemp=`gdmwhich freetemp`
 if [ -n "$freetemp" ] ; then
 	"$freetemp"
 fi
@@ -207,7 +223,7 @@ if [ "x$command" = "xdefault" ] ; then
 fi
 
 # add ssh-agent if found
-sshagent="`which ssh-agent 2>/dev/null`"
+sshagent="`gdmwhich ssh-agent`"
 if [ -n "$sshagent" ] && [ -x "$sshagent" ] && [ -z "$SSH_AUTH_SOCK" ]; then
     command="$sshagent -- $command"
 elif [ -z "$sshagent" ] ; then
